--- a/css/styles.css
+++ b/css/styles.css
@@ -211,12 +211,22 @@ button:hover {
   height: 40px;
 }
 
-.footer-media {
-  display: inline;
-  width:208px;
-  height: 80px;
+footer .container {
+  display: flex;
 }
 
+.social-title {
+  padding-left: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 2%;
+
+}
+
+.footer-media {
+  margin-left: 100px;
+}
 
 .section-one {
   display: flex;
