--- a/css/styles.css
+++ b/css/styles.css
@@ -215,13 +215,19 @@ footer .container {
   display: flex;
 }
 
+.second-icons:hover{
+stroke: #31D0AA;
+
+transition: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .social-title {
   padding-left: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 2%;
-
 }
 
 .footer-media {
