--- a/css/styles.css
+++ b/css/styles.css
@@ -181,11 +181,56 @@ button:hover {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
-  margin-bottom: 8px;
 }
 .portf {
   width: calc((100%-72px) / 3);
 }
+
+.portf {
+  position: relative;
+}
+
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  height: 300px;
+  margin: 0;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  transition: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #4d5ae5;
+}
+
+.portf:hover .overlay {
+  opacity: 1;
+}
+
+.portf:hover {
+  box-shadow: 1px 1px 3px 0 #2e2f42;
+}
+
+.text {
+  color: #f4f4fd;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  line-height: 24px;
+  letter-spacing: 2%;
+  width: 296px;
+  padding-top: 40px;
+  padding-left: 32px;
+}
+
 .our-portfolio li h3 {
   font-weight: 500;
   font-size: 20px;
@@ -215,11 +260,11 @@ footer .container {
   display: flex;
 }
 
-.second-icons:hover{
-stroke: #31D0AA;
+.second-icons:hover {
+  stroke: #31d0aa;
 
-transition: 250ms;
-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-title {
@@ -228,6 +273,8 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 2%;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .footer-media {
@@ -236,11 +283,10 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 .section-one {
   display: flex;
-  background-color: rgba(46, 47, 66, 0.7);
-  background-image: url(/images/office-background.png);
-  background-size: cover;
   padding: 188px 0;
-  background-blend-mode: overlay;
+  background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+    linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent),
+    url(/images/office-background.png) center / cover no-repeat;
 }
 
 .section-two {
