--- a/css/styles.css
+++ b/css/styles.css
@@ -260,9 +260,16 @@ footer .container {
   display: flex;
 }
 
+.second-icons  {
+  transition: fill 0.3s ease;
+  ;
+}
+.second-icons:hover {
+  background-color: #31d0aa;
+}
+
 .second-icons:hover {
   stroke: #31d0aa;
-
   transition: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
